force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>Survey object which will be linked to Cust Contact</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>