force-app/main/default/objects/Survey__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>custcontact</label>
    <referenceTo>custcontact__c</referenceTo>
    <relationshipLabel>Survey</relationshipLabel>
    <relationshipName>Survey</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>