force-app/main/default/objects/Survey__c/fields/Enter_your_Name__c.field-meta.xml
<CustomField>
    <fullName>Enter_your_Name__c</fullName>
    <description>Customers Name</description>
    <inlineHelpText>Customers Name</inlineHelpText>
    <label>Enter the Course Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>