force-app/main/default/objects/Survey__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Are you Satisfied?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>